<resources>
    <string name="app_name" translatable="false">It\'s Time!</string>
    <string name="database_name" translatable="false">hi-data</string>
    <!--List fragments name-->
    <string name="user_profile_fragment" translatable="false">HI-0001</string>
    <string name="sphere_fragment" translatable="false">HI-0002</string>
    <string name="create_task_fragment" translatable="false">HI-0003</string>
    <string name="task_list_fragment" translatable="false">HI-0006</string>
    <string name="details_fragment" translatable="false">HI-0007</string>
    <string name="settings_fragment" translatable="false">HI-0008</string>
    <string name="date_picker_dialog" translatable="false">Date Picker Dialog</string>
    <string name="time_picker_dialog" translatable="false">Time Picker Dialog</string>
    <string name="start_now">Start Now!</string>
    <string name="on_board_icons" translatable="false">OnBoardIcons</string>
    <string name="head_1">Goals</string>
    <string name="head_2">Productivity</string>
    <string name="head_3">Life</string>
    <string name="on_board_1">"Write down all your tasks and goals.\n    "</string>
    <string name="on_board_2">Perform tasks more efficiently thanks to the alert system and calendar</string>
    <string name="reg_text">Or Register Now</string>
    <string name="password">Password</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="emptyString">Field can\'t be empty</string>
    <string name="incorrect_address">Wrong email address</string>
    <string name="login_complete">Log in Successful!</string>
    <string name="login_failed">Log in Failed!</string>
    <string name="dialog_signing_in">Signing In</string>
    <string name="dialog_text">Please, wait…</string>
    <!--Register Activity strings -->
    <string name="register">Register now!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="dialog_registration">Registration</string>
    <string name="error_password">The password must contain at least 8 characters</string>
    <string name="register_complete">Register complete!</string>
    <string name="register_failed">Register Failed!</string>
    <!-- Sphere activity strings -->
    <string name="search_task">Search Task</string>
    <string name="sphere">Spheres of life</string>
    <string name="profile">Profile</string>
    <string name="search_text">Search tasks…</string>
    <string name="create_task">Create Task</string>
    <string name="icon_of_the_project" translatable="false">Icon of the project</string>
    <string name="registration_button_image" translatable="false">Registration button image</string>
    <string name="task_name">Task name</string>
    <string name="description">Description</string>
    <string name="did_you_want_to_quit">Did you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="when_to_start_worrying">When to start worrying?</string>
    <string name="time_and_date">Time and Date</string>
    <string name="pick_deadline_date">Pick \"deadline\" time</string>
    <string name="choose_sphere_and_icon">Choose Sphere and Icon</string>
    <string name="choose_sphere">Choose Sphere</string>
    <string name="work">Work</string>
    <string name="health">Health</string>
    <string name="yourself">Yourself</string>
    <string name="routine">Routine</string>
    <string name="all_tasks">All task\'s</string>
    <string name="pick_date">Pick date!</string>
    <string name="pick_time">Pick time</string>
    <string name="no">No</string>
    <string name="log_in">Log In!</string>
    <string name="on_board_3">Free time for new experiences, pleasures and your life.</string>
    <string name="back_button">Back</string>
    <string name="choose_the_right_one">Choose the right one</string>
    <string name="wrong_task">One of the important fields is empty.</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="choose_priority">Choose Priority</string>
    <string name="priority_level">Choose level</string>
    <string name="high_priority">High priority</string>
    <string name="low_priority">Low priority</string>
    <string name="priority">Priority:</string>
    <string name="name">Name</string>
    <string name="no_plans">No plans!</string>
    <string name="confirm_your_email">Confirm your E-mail</string>
    <string name="confirmed">Your E-mail confirmed!</string>
    <string name="synchronization">Synchronization via Google Calendar</string>
    <string name="after_verified">Check your E-mail!</string>
    <string name="delete">Delete</string>
    <string name="sure_want_delete">Are you sure you want to delete task</string>
    <string name="congratulations">Congratulations! You have done well!</string>
    <string name="yeah">Yeah!</string>
    <string name="deadline_time">Deadline time</string>
    <string name="needed_time">Start time</string>
    <string name="enter_changes">Enter changes</string>
    <string name="ok">OK</string>
    <string name="change_password">Change password</string>
    <string name="password_changed">Password changed!</string>
    <string name="all_tasks_db" translatable="false">All task\'s</string>
    <string name="work_db" translatable="false">Work</string>
    <string name="health_db" translatable="false">Health</string>
    <string name="routine_db" translatable="false">Routine</string>
    <string name="yourself_db" translatable="false">Yourself</string>
    <string name="empty_data">Empty</string>
    <string name="incorrect_pass">Incorrect Password</string>
    <string name="image_for_empty_data" translatable="false">Image for empty data</string>
    <string name="sphere_icon" translatable="false">Sphere icon</string>
    <string name="button_icon" translatable="false">Button icon</string>
    <string name="divider" translatable="false">Divider</string>
    <string name="field_icon" translatable="false">Field icon</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_pref_key" translatable="false">DarkThemePreference</string>
    <string name="dark_theme_on_summary">Dark theme is on</string>
    <string name="dark_theme_off_summary">Dark theme is off</string>
    <string name="settings">Settings</string>
</resources>
